--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mkdirp": "^0.5.0",
     "npmlog": "^1.0.0",
     "rc": "^1.0.1",
-    "request": "^2.51.0"
+    "request": "^2.51.0",
+    "update-notifier": "^0.5.0"
   },
   "repository": {
     "type": "git",
