--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "minimist": "^1.1.0",
     "mkdirp": "^0.5.0",
     "npmlog": "^1.0.0",
+    "os-homedir": "^1.0.0",
     "rc": "^1.0.1",
     "request": "^2.51.0",
     "update-notifier": "^0.5.0"
