--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "async": "^0.9.0",
     "cheerio": "^0.18.0",
     "coffee-script": "^1.8.0",
+    "express": "^4.13.1",
     "glob": "^4.3.5",
+    "gunzip-maybe": "^1.2.1",
     "html-minifier": "^0.6.9",
     "inquirer": "^0.8.0",
     "lodash": "^2.4.1",
+    "mime": "^1.3.4",
     "minimist": "^1.1.0",
     "mkdirp": "^0.5.0",
     "npmlog": "^1.0.0",
     "os-homedir": "^1.0.0",
     "rc": "^1.0.1",
     "request": "^2.51.0",
+    "tar-stream": "^1.2.1",
     "update-notifier": "^0.5.0"
   },
   "repository": {
