--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async": "^0.9.0",
     "cheerio": "^0.19.0",
     "coffee-script": "^1.8.0",
+    "end-of-stream": "^1.1.0",
     "express": "^4.13.1",
     "glob": "^4.3.5",
     "gunzip-maybe": "^1.2.1",
