--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "npmlog": "^1.0.0",
     "os-homedir": "^1.0.0",
     "rc": "^1.0.1",
-    "request": "^2.51.0",
+    "request": "2.58.0",
     "tar-stream": "^1.2.1",
     "update-notifier": "^0.5.0"
   },
