--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "rc": "^1.0.1",
     "request": "2.58.0",
     "tar-stream": "^1.2.1",
-    "update-notifier": "^0.5.0"
+    "update-notifier": "^0.5.0",
+    "warning-header-parser": "^1.0.0"
   },
   "repository": {
     "type": "git",
