--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "livingdocs-manager",
   "version": "2.4.0",
+  "description": "A cli to manage designs and the configuration of a livingdocs server.",
   "main": "index.js",
   "bin": {
     "livingdocs-manager": "./bin/index.js",
